[gd_scene load_steps=10 format=3 uid="uid://cl258gsfnevsr"]

[ext_resource type="Texture2D" uid="uid://bmetc4x5dtgp4" path="res://assets/sprites/slime_green.png" id="1_0yuac"]
[ext_resource type="Script" path="res://scripts/glorb.gd" id="1_dbkfh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rcphc"]
atlas = ExtResource("1_0yuac")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymf4x"]
atlas = ExtResource("1_0yuac")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_esp2f"]
atlas = ExtResource("1_0yuac")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_plirr"]
atlas = ExtResource("1_0yuac")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_abfh2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcphc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymf4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esp2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plirr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajx0l"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjcyb"]
size = Vector2(14, 15)

[node name="glorb" type="Node2D"]
script = ExtResource("1_dbkfh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_abfh2")
frame_progress = 0.626008

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3

[node name="HitBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ajx0l")

[node name="AttackBox" type="Area2D" parent="."]
collision_mask = 3

[node name="AttackBox" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(4, -7.5)
shape = SubResource("RectangleShape2D_jjcyb")

[connection signal="body_entered" from="AttackBox" to="." method="_on_body_entered"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="body_exited" from="AttackBox" to="." method="_on_body_exited"]
